--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,96 @@
                 </div>
             </div>
         </nav>
+        <main>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What are the diffrences between var, let and const?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Answer:</strong> The var keyword is the oldest way
+                            of declaring variables in JavaScript and is supported by all browsers. The let and const
+                            keywords are newer additions to the language and are not supported by older browsers.
+                            If you need to support older browsers, you can use var instead of let or const. If you don’t
+                            need to support older browsers, you can use let or const. If you want your variable to be
+                            immutable, use const.
+                            Another difference between var and let/const is that var variables are function-scoped,
+                            while let and const variables are block-scoped.
+                            This means that var variables are only available within the function they were declared in.
+                            On the other hand, let and const variables are only available within the block they were
+                            declared in.
+                            So, to sum up, the main differences between var, let and const are:
+                            var is function-scoped while let and const are block-scoped.
+                            var variables can be reassigned while let and const variables can not.
+                            var variables are declared using the var keyword while let and const variables are declared
+                            using the let and const keywords respectively.
+                            const variables are immutable while let and var variables are not.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            what are the differences between regular function and arrow function?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Answer:</strong>An arrow function expression is a syntactically compact alternative
+                            to a regular function expression, although without its own bindings to the this, arguments,
+                            super, or new.target keywords. Arrow function expressions are ill suited as methods, and
+                            they cannot be used as constructors.
+                            There are 3 subtle differences in regular functions and arrow functions in JavaScript.
+                            No own this bindings
+                            Arrow functions do not have their own this value. The value of this inside an arrow function
+                            is always inherited from the enclosing scope.
+                            Arrow functions do not have a arguments array
+                            In JS arguments array in functions is a special object that can be used to get all the
+                            arguments passed to the function. Similar to this, arrow functions do not have their own
+                            binding to a arguments object, they are bound to arguments of enclosing scope.
+                            Arrow functions are callable but not constructable
+                            If a function is constructable, it can be called with new, i.e. new User(). If a function is
+                            callable, it can be called without new (i.e. normal function call).
+                            Functions created through function declarations / expressions are both constructable and
+                            callable.
+                            Arrow functions (and methods) are only callable. class constructors are only constructable.
+                            If you are trying to call a non-callable function or to construct a non-constructable
+                            function, you will get a runtime error.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            what are the differences between .forEach, .map, .filter and .find?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Answer:</strong> .forEach() is great you need to execute a function for each
+                            individual element in an array. Good practice is that you should use .forEach() when you
+                            can’t use other array methods to accomplish your goal. I know this may sound vague, but
+                            .forEach() is a generic tool, only use it when you can’t use a more specialized tool.
+
+                            .map() when you want to transform elements in an array.
+
+                            .filter() when you want to select a subset of multiple elements from an array.
+
+                            .find() When you want to select a single element from an array.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <!-- scripts added -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
