--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body class="bg-info">
+<body class="bg-light">
     <header>
         <!-- navbar added -->
         <nav class="navbar navbar-expand-lg bg-light">
@@ -37,12 +37,40 @@
             </div>
         </nav>
         <!-- categories added -->
-        <div id="category-container" class="list-group d-flex flex-row text-center border border-primay container">
+        <div id="category-container" class="list-group d-flex flex-row justify-content-center text-center container">
         </div>
     </header>
     <main>
+        <!-- spinner added -->
+        <section id="load-spinner" class="d-none">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+        <!-- news details -->
         <section>
             <div id="news-detail"></div>
+        </section>
+        <section>
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id="full-news" class="modal-body">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- scripts added -->
