--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body class="bg-light">
-    <header>
+    <header class="my-3">
         <!-- navbar added -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg">
             <div class="container gx-0">
-                <a class="navbar-brand fs-1 fw-bold" href="index.html">Daily Bulletin</a>
+                <a class="navbar-brand fs-1 fw-bold text-primary" href="index.html">Daily Bulletin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                     <div>
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item px-4">
-                                <a class="nav-link" href="index.html">NEWZ</a>
+                                <a class="nav-link fw-bolder text-primary" href="index.html">NEWZ</a>
                             </li>
                             <li class="nav-item px-4">
-                                <a class="nav-link" href="blog.html">BLOG</a>
+                                <a class="nav-link fw-bolder text-primary" href="blog.html">BLOG</a>
                             </li>
                         </ul>
                     </div>
@@ -37,7 +37,8 @@
             </div>
         </nav>
         <!-- categories added -->
-        <div id="category-container" class="list-group d-flex flex-row justify-content-center text-center container">
+        <div id="category-container"
+            class="list-group d-flex flex-row justify-content-center text-center container my-3">
         </div>
     </header>
     <main>
