added found message

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         </div>
     </header>
     <main>
+        <!-- found message -->
+        <section>
+            <div class="container fw-semibold">
+                <p id="message"></p>
+            </div>
+        </section>
         <!-- spinner added -->
         <section id="load-spinner" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
