--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
             </div>
         </nav>
         <!-- categories added -->
-        <div id="category-container"
-            class="list-group d-flex flex-row justify-content-center text-center container my-3">
+        <div>
+            <p id="error-message"></p>
         </div>
     </header>
     <main>
         <!-- found message -->
         <section>
+            <div id="category-container"
+                class="list-group d-flex flex-row justify-content-center text-center container my-3">
+            </div>
             <div class="container fw-semibold">
                 <p id="message"></p>
             </div>
