--- a/index.html
+++ b/index.html
@@ -36,17 +36,14 @@
                 </div>
             </div>
         </nav>
-        <!-- categories added -->
-        <div>
-            <p id="error-message"></p>
-        </div>
     </header>
     <main>
-        <!-- found message -->
         <section>
+            <!-- categories added --------->
             <div id="category-container"
-                class="list-group d-flex flex-row justify-content-center text-center container my-3">
+                class="list-group d-flex flex-column flex-md-row justify-content-center text-center container my-3">
             </div>
+            <!-- found message ------------>
             <div class="container fw-semibold">
                 <p id="message"></p>
             </div>
@@ -83,11 +80,16 @@
             </div>
         </section>
     </main>
+
+
     <!-- scripts added -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
     <script src="source.js"></script>
 </body>
+<footer class="mb-0 pt-5 border-top border-white text-center">
+    <small class="text-dark text-center">Copyright @ 2022 All Rights Reserved</small>
+</footer>
 
 </html>
