--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <!-- spinner added -->
         <section id="load-spinner" class="d-none">
-            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center text-primary">
                 <div class="spinner-border" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
