footer & header edited in blog

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script src="source.js"></script>
 </body>
 <footer class="mb-0 pt-5 border-top border-white text-center">
-    <small class="text-dark text-center">Copyright @ 2022 All Rights Reserved</small>
+    <small class="text-dark text-center fw-semibold">Copyright @ 2022 All Rights Reserved</small>
 </footer>
 
 </html>
