--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,14 @@
     <title>Daily Bulletin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Ubuntu', sans-serif;
+        }
+    </style>
 </head>
 
 <body class="bg-info">
@@ -133,5 +142,8 @@
         crossorigin="anonymous"></script>
     <script src="source.js"></script>
 </body>
+<footer class="mb-0 pt-5 border-top border-white text-center">
+    <small class="text-dark text-center fw-semibold">Copyright @ 2022 All Rights Reserved</small>
+</footer>
 
 </html>
